--- a/index.html
+++ b/index.html
@@ -11,5 +11,6 @@
   js.src = 'https://connect.facebook.net/en_US/sdk.js#xfbml=1&version=v2.11&appId=291348977589467';
   fjs.parentNode.insertBefore(js, fjs);
 }(document, 'script', 'facebook-jssdk'));</script>
+<img src="http://kampaania.tv3.ee/userfiles/image/gallery/eesti-parim-pagar/thumb/img-0598_20171205222657.JPG" />
 <div class="fb-like" data-href="http://kampaania.tv3.ee/eesti-parim-pagar/?photo=img-0598_20171205222657" data-layout="standard" data-action="like" data-size="large" data-show-faces="true" data-share="true"></div>
 </body>
