--- a/index.html
+++ b/index.html
@@ -13,5 +13,6 @@
 }(document, 'script', 'facebook-jssdk'));</script>
 <h1>Ole hea ja viska Liisi tordile LIKE!</h1>
 <img src="http://kampaania.tv3.ee/userfiles/image/gallery/eesti-parim-pagar/thumb/img-0598_20171205222657.JPG" />
+<div></div>
 <div class="fb-like" data-href="http://kampaania.tv3.ee/eesti-parim-pagar/?photo=img-0598_20171205222657" data-layout="standard" data-action="like" data-size="large" data-show-faces="true" data-share="true"></div>
 </body>
