--- a/index.html
+++ b/index.html
@@ -11,8 +11,10 @@
   js.src = 'https://connect.facebook.net/en_US/sdk.js#xfbml=1&version=v2.11&appId=291348977589467';
   fjs.parentNode.insertBefore(js, fjs);
 }(document, 'script', 'facebook-jssdk'));</script>
-<h1>Ole hea ja viska Liisi tordile LIKE!</h1>
+<h1>Ole hea ja pane Liisi tordile LIKE!</h1>
+<div class="fb-like" data-href="http://kampaania.tv3.ee/eesti-parim-pagar/?photo=img-0598_20171205222657" data-layout="standard" data-action="like" data-size="large" data-show-faces="true" data-share="true"></div>
+<hr />
 <img src="http://kampaania.tv3.ee/userfiles/image/gallery/eesti-parim-pagar/thumb/img-0598_20171205222657.JPG" />
-<div></div>
+<hr />
 <div class="fb-like" data-href="http://kampaania.tv3.ee/eesti-parim-pagar/?photo=img-0598_20171205222657" data-layout="standard" data-action="like" data-size="large" data-show-faces="true" data-share="true"></div>
 </body>
